--- a/TestBench/Podfile
+++ b/TestBench/Podfile
@@ -8,6 +8,7 @@ target 'TestBench' do
     pod 'iLogin', :git => 'https://github.com/jalajoninc/BPod.git'
     pod 'iHome', :git => 'https://github.com/jalajoninc/BPod.git'
     pod 'iRating', :git => 'https://github.com/jalajoninc/BPod.git'
+    pod 'iEasy', :git => 'https://github.com/jalajoninc/BPod.git'
 
     post_install do |installer|
         installer.pods_project.targets.each do |target|
