--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 # Uncomment the next line to define a global platform for your project
 
-target 'TestBench' do
+target 'Example' do
   # Comment the next line if you don't want to use dynamic frameworks
   platform :ios, '13.0'
   use_frameworks!
